[package]
name = "meta-bcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
serde = "1.0.180"
serde_bytes = "0.11.12"
hex = "0.4.3"
serde_json = "1.0.104"
move-binary-format = {git="https://github.com/aptos-labs/aptos-core", rev="6b62f0ac303f882f4a590d97bf62584cdb929755"}
